--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aurelius - Luxury Real Estate Dubai</title>
+    <title>Aurelius - Luxury Real Estate Consultant - Dubai</title>
     <meta name="description" content="Aurelius Realty - Luxury Real Estate Investment Advisory & Lifestyle Consultancy. Curated Investments. Discreet Excellence. Serving ultra-high-net-worth clients in Dubai." />
   </head>
   <body>
